# copython

./: .gitignore.j2  CHANGELOG.md.j2  Justfile  Makefile  Makefile.j2  README.md  README.md.j2  copier.yml  op.just  pyproject.toml.j2  tox.ini.j2  {% if docs == 'readthedocs' %}.readthedocs.yaml{% endif %}  {% if readthedocs_tool == 'mkdocs' %}mkdocs.yml{% endif %}
.github/: CONTRIBUTING.md.j2  SECURITY.md.j2
.just/: gh.just
NEWS.d/: .new_fragment.md.j2.j2
docs/: badges.md.j2  features.md  usage.md.j2  {% if project_script %}cli.md{% endif %}.j2
docs/openssf/: best-practices.md.j2  bestpractices.md.j2
docs/sphinx/: conf.py.j2  index.rst.j2
docs/{% if readthedocs_tool == 'mkdocs' %}mkdocs{% endif %}/: index.md
docs/{% if readthedocs_tool == 'sphinx' %}sphinx{% endif %}/: index.rst.j2
python/: CHANGELOG.md  Justfile  README.md  cookiecutter.json  tox.ini
python/docs/sphinx/: conf.py
python/src/{{ cookiecutter.project_slug }}/: __init__.py
python/{{cookiecutter.project_slug}}/: Justfile  Makefile  README.md  pyproject.toml
python/{{cookiecutter.project_slug}}/docs/: badges.md
src/{{module_name}}/: __init__.py  __version__.py.j2
tests/: test_usage.py.j2  {% if project_script %}test_cli.py{% endif %}.j2
